# ARRS

./: .gitignore  CMakeLists.txt
include/: constants.h  controller.h  repository.h  service.h  types.h
src/: controller.c  input_interface.c  main.c  repository.c  service.c
